Fixed horizontal scrolling, added validation of obscene words and angle brackets in the form, added output of obscene words messages to the modal window, removed unnecessary text elements in the email template

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1264,14 +1264,14 @@ textarea {
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 body {
   margin: 0 auto;
   font-family: var(--font-main);
-  overflow-x: hidden;
-  background-color: lightblue;
+  background: radial-gradient(#a3e7da, #ffcaca 70%, #b2e1ff);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body._lock {
   overflow: hidden;
@@ -1282,6 +1282,10 @@ body._lock {
     transform: rotate(360deg);
   }
 }
+.main {
+  overflow-x: hidden;
+}
+
 .container {
   max-width: 1520px;
   width: 100%;
@@ -2453,7 +2457,7 @@ body._touch .menu__list > li._active .menu__arrow {
   gap: 30px;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   padding: 10px;
   background-color: #333;
   color: #fff;
