--- a/assets/styles/scss/common/cookie.scss
+++ b/assets/styles/scss/common/cookie.scss
@@ -1,44 +1,41 @@
 #cookieConsent {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    z-index: 999;
-    box-sizing: border-box;
-    line-height: 150%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  z-index: 999;
+  box-sizing: border-box;
+  line-height: 150%;
 
-    
-    @include md {
+  @include md {
     font-size: 13px;
-    }
-    
-    @include sm {
+  }
+
+  @include sm {
     font-size: 12px;
-    }
-    
-    @include xs {
-        font-size: 10px;
-    }
+  }
+
+  @include xs {
+    font-size: 10px;
+  }
 }
 
 .cookieButton {
-    @include md {
-        font-size: 13px;
-        }
-        
-        @include sm {
-        
-        }
-        
-        @include xs {
-          
-        }
+  @include md {
+    font-size: 13px;
+  }
+
+  @include sm {
+  }
+
+  @include xs {
+  }
 }
